Fixed contrast of text in dialog ok button hover / focus
Also added transitions

--- a/src/css/boom/dialog.less
+++ b/src/css/boom/dialog.less
@@ -33,9 +33,12 @@
 			background: @dark-green;
 			color: @white;
 			padding: 1rem 2rem;
+			transition: all 0.5s;
 
 			&:hover, &:focus {
 				background: @light-green;
+				color: @black;
+				transition: all 0.5s;
 			}
 
 			+ button {
